add a way to restore previous pid behavior

--- a/.github/workflows/os-check.yml
+++ b/.github/workflows/os-check.yml
@@ -49,6 +49,8 @@ jobs:
           '--enable-dtls --enable-dtls13 --enable-dtls-frag-ch
             --enable-dtls-mtu CPPFLAGS=-DWOLFSSL_DTLS_RECORDS_CAN_SPAN_DATAGRAMS',
           '--enable-opensslall --enable-opensslextra CPPFLAGS=-DWC_RNG_SEED_CB',
+          '--enable-opensslall --enable-opensslextra
+            CPPFLAGS='-DWC_RNG_SEED_CB -DWOLFSSL_NO_GETPID'',
         ]
     name: make check
     if: github.repository_owner == 'wolfssl'
