--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2636,6 +2636,7 @@ if(WOLFSSL_EXAMPLES)
         tests/api/test_tls_ext.c
         tests/api/test_tls.c
         tests/api/test_x509.c
+        tests/api/test_asn.c
         tests/srp.c
         tests/suites.c
         tests/w64wrapper.c
