Enable MD5 when --enable-fortress is set

--- a/configure.ac
+++ b/configure.ac
@@ -5485,7 +5485,8 @@ if test "$ENABLED_WPAS" = "yes" || test "$ENABLED_HAPROXY" = "yes" || \
     test "$ENABLED_KRB" = "yes" || test "$ENABLED_NETSNMP" = "yes" || \
     test "$ENABLED_NGINX" = "yes" || test "$ENABLED_OPENSSH" = "yes" || \
     test "$ENABLED_OPENSSLEXTRA" = "yes" || test "$ENABLED_OPENVPN" = "yes" || \
-    test "$ENABLED_TLSV10" = "yes" || test "$ENABLED_OLD_TLS" = "yes"
+    test "$ENABLED_TLSV10" = "yes" || test "$ENABLED_OLD_TLS" = "yes" || \
+    test "$ENABLED_FORTRESS" = "yes"
 then
     ENABLED_MD5=yes
 fi
