--- a/certs/test/include.am
+++ b/certs/test/include.am
@@ -69,6 +69,7 @@ EXTRA_DIST += \
          certs/test/server-localhost.pem \
          certs/test/ossl-trusted-cert.pem \
          certs/test/ktri-keyid-cms.msg \
+         certs/test/encrypteddata.msg \
          certs/test/smime-test.p7s \
          certs/test/smime-test-canon.p7s \
          certs/test/smime-test-multipart.p7s \
