add linuxkm/wolfcrypt.lds module linker script, explicitly grouping wolfcrypt sections together;
linuxkm/Kbuild: add linker script flag, containerize several more previously-missed ELF sections, and add a test verifying no sections were missed;

linuxkm/linuxkm_memory.c: remove obsolete lkm_realloc() shim and unneeded my__show_free_areas() wrapper;

linuxkm/linuxkm_wc_port.h: add new mapping from realloc() to native kvrealloc(), and gate out a slew of headers when __PIE__ to avoid polluting wolfCrypt objects with various unneeded header-implemented functions with associated awkward symbols references;

linuxkm/lkcapi_glue.c: harmonize gate for REGISTER_ALG_OPTIONAL();

linuxkm/module_hooks.c: add "ERROR:" prefixes on pr_err()s; add wc_RunAllCast_fips() at shutdown to send confidence verification to the kernel log; remove section bounds checks now that layout is unreliable;

wolfssl/wolfcrypt/settings.h: for WOLFSSL_LINUXKM && HAVE_LINUXKM_PIE_SUPPORT, #define WOLFSSL_ECC_CURVE_STATIC and WOLFSSL_NAMES_STATIC;

wolfssl/wolfcrypt/types.h: refactor the typedef for wcchar from a pointer to a char[];

wolfcrypt/src/wc_xmss.c and wolfssl/wolfcrypt/wc_lms.h: add WOLFSSL_NAMES_STATIC code paths for struct wc_XmssString and struct wc_LmsParamsMap;

wolfcrypt/src/asn.c: add WOLFSSL_NAMES_STATIC code paths for struct CertNameData, and add static attribute to a slew of wcchars not used or declared outside asn.c.

--- a/linuxkm/Kbuild
+++ b/linuxkm/Kbuild
@@ -151,6 +151,8 @@ endif
 
 ifeq "$(ENABLED_LINUXKM_PIE)" "yes"
 
+LDFLAGS_libwolfssl.o += -T $(src)/wolfcrypt.lds
+
 rename-pie-text-and-data-sections: $(WOLFSSL_OBJ_TARGETS)
 
 ifndef NM
@@ -186,8 +188,39 @@ ifneq "$(quiet)" "silent_"
 endif
 	cd "$(obj)" || exit $$?
 	for file in $(WOLFCRYPT_PIE_FILES); do
-	    $(OBJCOPY) --rename-section .text=.text.wolfcrypt --rename-section .data=.data.wolfcrypt --rename-section .rodata=.rodata.wolfcrypt "$$file" || exit $$?
+	    $(OBJCOPY) --rename-section .text=.text.wolfcrypt	\
+	    --rename-section .text.unlikely=.text.wolfcrypt	\
+	    --rename-section .rodata=.rodata.wolfcrypt		\
+	    --rename-section .rodata.str1.1=.rodata.wolfcrypt	\
+	    --rename-section .rodata.str1.8=.rodata.wolfcrypt	\
+	    --rename-section .data=.data.wolfcrypt		\
+	    --rename-section .data.rel.local=.data.wolfcrypt	\
+	    --rename-section .bss=.bss.wolfcrypt "$$file" || exit $$?
 	done
+	{ $(READELF) --syms $(WOLFCRYPT_PIE_FILES) |		\
+        $(AWK) -v obj="$(obj)" '				\
+	    /File:/ {						\
+		if (substr($$2, 1, length(obj)) == obj) {	\
+		    curfile = substr($$2, length(obj) + 2);	\
+		} else {					\
+		    curfile=$$2;				\
+		}						\
+		next;						\
+	    }							\
+	    {							\
+		if (($$4 == "SECTION") && ($$8 !~ "wolfcrypt")) {\
+		    if (! ((curfile ";" $$8) in warned_on)) {	\
+			print curfile ": " $$8 >"/dev/stderr";	\
+			warned_on[curfile ": " $$8] = 1;	\
+			++warnings;				\
+	    }}}							\
+	    END {						\
+		if (warnings) {					\
+		    exit(1);  					\
+		} else {					\
+		    exit(0);					\
+	    }}'; } ||						\
+	{ echo 'Error: section(s) missed by containerization.' >&2; exit 1; }
 ifneq "$(quiet)" "silent_"
 	echo '  wolfCrypt .{text,data,rodata} sections containerized to .{text,data,rodata}.wolfcrypt'
 endif
