Fix build issue with ML-DSA 44 only. Fix --enable-mlkem=all to enable features (keygen/enc/dec) to match --enable-dilithium behavior and allow uses like: `--enable-mlkem=all,512,small`. Fix issue building mem track with missing `PRINT_HEAP_ADDRESS` (reproduced with `--enable-trackmemory=verbose --enable-stacksize=verbose`).
```
wolfcrypt/src/dilithium.c:6696:21: error: expected expression before '}' token
 6696 |                     }
      |
```

--- a/configure.ac
+++ b/configure.ac
@@ -1470,18 +1470,20 @@ ENABLED_MLKEM_DECAPSULATE=no
 for v in `echo $ENABLED_MLKEM | tr "," " "`
 do
   case $v in
-  yes|all)
+  yes)
     ENABLED_MLKEM512=yes
     ENABLED_MLKEM768=yes
     ENABLED_MLKEM1024=yes
     ENABLED_MLKEM_MAKE_KEY=yes
     ENABLED_MLKEM_ENCAPSULATE=yes
     ENABLED_MLKEM_DECAPSULATE=yes
-    if test "$v" = "all"
-    then
-        ENABLED_ML_KEM=yes
-        ENABLED_ORIGINAL=yes
-    fi
+    ;;
+  all)
+    ENABLED_MLKEM_MAKE_KEY=yes
+    ENABLED_MLKEM_ENCAPSULATE=yes
+    ENABLED_MLKEM_DECAPSULATE=yes
+    ENABLED_ML_KEM=yes
+    ENABLED_ORIGINAL=yes
     ;;
   no)
     ;;
