linuxkm/Kbuild: skip "section(s) missed by containerization" test unless KERNEL_ARCH_X86;
linuxkm/linuxkm_wc_port.h: fixes for legacy kernels, particularly: when building TLS stack (!WOLFCRYPT_ONLY), use the best heap with a functioning realloc(), else use kvmalloc() and friends if available, even if kvrealloc() is unavailable.  also, provide for XMALLOC_USER and XMALLOC_OVERRIDE;

linuxkm/lkcapi_glue.c: recognize the new CONFIG_CRYPTO_SELFTESTS_FULL alongside the old CONFIG_CRYPTO_MANAGER_EXTRA_TESTS;

linuxkm/linuxkm_memory.c: restore my__show_free_areas() in case it's still needed.

--- a/linuxkm/Kbuild
+++ b/linuxkm/Kbuild
@@ -197,6 +197,7 @@ endif
 	    --rename-section .data.rel.local=.data.wolfcrypt	\
 	    --rename-section .bss=.bss.wolfcrypt "$$file" || exit $$?
 	done
+	[ "$(KERNEL_ARCH_X86)" != "yes" ] ||			\
 	{ $(READELF) --syms $(WOLFCRYPT_PIE_FILES) |		\
         $(AWK) -v obj="$(obj)" '				\
 	    /File:/ {						\
