--- a/linuxkm/Kbuild
+++ b/linuxkm/Kbuild
@@ -203,6 +203,7 @@ endif
 	    --rename-section .rodata=.rodata.wolfcrypt		\
 	    --rename-section .rodata.str1.1=.rodata.wolfcrypt	\
 	    --rename-section .rodata.str1.8=.rodata.wolfcrypt	\
+	    --rename-section .rodata.cst16=.rodata.wolfcrypt	\
 	    --rename-section .data=.data.wolfcrypt		\
 	    --rename-section .data.rel.local=.data.wolfcrypt    \
 	    --rename-section .bss=.bss.wolfcrypt "$$file" || exit $$?
