--- a/.github/workflows/haproxy.yml
+++ b/.github/workflows/haproxy.yml
@@ -47,7 +47,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        haproxy_ref: [ 'v3.1.0' ]
+        haproxy_ref: [ 'v3.1.0', 'v3.2.0']
     steps:
     - name: Install test dependencies
       run: |
@@ -81,6 +81,13 @@ jobs:
     - name: Build haproxy
       working-directory: build-dir/haproxy-${{matrix.haproxy_ref}}
       run: make clean && make TARGET=linux-glibc USE_OPENSSL_WOLFSSL=1 SSL_LIB=$GITHUB_WORKSPACE/build-dir/lib SSL_INC=$GITHUB_WORKSPACE/build-dir/include ADDLIB=-Wl,-rpath,$GITHUB_WORKSPACE/build-dir/lib CFLAGS="-fsanitize=address" LDFLAGS="-fsanitize=address"
+
+      # wlallemand/VTest used in v3.1.0 is no longer available
+    - name: Patch build-vtest.sh for v3.1.0
+      if: matrix.haproxy_ref == 'v3.1.0'
+      working-directory: build-dir/haproxy-${{ matrix.haproxy_ref }}/scripts
+      run: |
+        sed -i 's|https://github.com/wlallemand/VTest/archive/refs/heads/haproxy-sd_notify.tar.gz|https://github.com/vtest/VTest2/archive/main.tar.gz|' build-vtest.sh
 
     - name: Build haproxy vtest
       working-directory: build-dir/haproxy-${{matrix.haproxy_ref}}
