api.c: split out more tests into separate files
wolfCrypt PKCS7
wolfCrypt PKCS12
OpenSSL compat ASN.1
OpenSSL compat BN
OpenSSL comppat BIO
OpenSSL comppat Digest
OpenSSL comppat MAC
OpenSSL comppat Cipher
OpenSSL comppat RSA
OpenSSL comppat DH
OpenSSL comppat EC
OpenSSL comppat ECX
OpenSSL comppat DSA

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2647,6 +2647,19 @@ if(WOLFSSL_EXAMPLES)
         tests/api/test_tls.c
         tests/api/test_x509.c
         tests/api/test_asn.c
+        tests/api/test_pkcs7.c
+        tests/api/test_pkcs12.c
+        tests/api/test_ossl_asn1.c
+        tests/api/test_ossl_bn.c
+        tests/api/test_ossl_bio.c
+        tests/api/test_ossl_dgst.c
+        tests/api/test_ossl_mac.c
+        tests/api/test_ossl_cipher.c
+        tests/api/test_ossl_rsa.c
+        tests/api/test_ossl_dh.c
+        tests/api/test_ossl_ec.c
+        tests/api/test_ossl_ecx.c
+        tests/api/test_ossl_dsa.c
         tests/srp.c
         tests/suites.c
         tests/w64wrapper.c
